update banner and color

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <div class="nav-switch">
       <i class="fa fa-bars"></i>
     </div>
-    <div class="phone-number">+675 334 567 223</div>
+    <div class="phone-number">+234 802 537 9288</div>
     <nav class="nav-menu">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -130,19 +130,19 @@
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <div class="team-member">
-            <img src="img/team/1.jpg" alt>
+            <img src="img/director.jpeg" alt>
             <div class="member-info">
-              <h2>Jack Smith</h2>
-              <p>Senior Architect</p>
+              <h2>Obinna Nwanma</h2>
+              <p>Managing Director</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="team-member">
-            <img src="img/team/2.jpg" alt>
+            <img src="img/ud-director.jpeg" alt>
             <div class="member-info">
-              <h2>Lili Jameson</h2>
-              <p>Senior Architect</p>
+              <h2>Udochukwu Nwanma</h2>
+              <p>Director</p>
             </div>
           </div>
         </div>
