--- a/contact.html
+++ b/contact.html
@@ -31,12 +31,12 @@
 
   <header class="header-area">
     <a href="index.html" class="logo-area">
-      <img src="img/logo.png" alt>
+      <img src="img/ceone-img.png" alt>
     </a>
     <div class="nav-switch">
       <i class="fa fa-bars"></i>
     </div>
-    <div class="phone-number">+675 334 567 223</div>
+    <div class="phone-number">+234 802 537 9288</div>
     <nav class="nav-menu">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -63,10 +63,9 @@
       </div>
       <div class="row">
         <div class="col-lg-3 contact-info mb-5 mb-lg-0">
-          <p>Address: 1481 Creekside Lane Avila Beach, CA 93424 </p>
-          <p>Phone: +53 345 7953 32453</p>
-          <p>Email: <a href="https://preview.colorlib.com/cdn-cgi/l/email-protection" class="__cf_email__"
-              data-cfemail="20594f55524d41494c60474d41494c0e434f4d">[email&#160;protected]</a></p>
+          <p>Address: 28 Oromineke Lane, D - line, Port Harcourt, Rivers State </p>
+          <p>Phone: +234 802 537 9288</p>
+          <p>Email: info@ceone.com</p>
           <div class="cf-social">
             <a href="#"><i class="fa fa-google-plus"></i></a>
             <a href="#"><i class="fa fa-pinterest"></i></a>
