--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="nav-switch">
       <i class="fa fa-bars"></i>
     </div>
-    <div class="phone-number">+675 334 567 223</div>
+    <div class="phone-number">+234 802 537 9288</div>
     <nav class="nav-menu">
       <ul>
         <li class="active"><a href="index.html">Home</a></li>
@@ -50,10 +50,10 @@
   <section class="hero-section">
 
     <div class="hero-slider">
-      <div class="hero-slide-item set-bg" data-setbg="img/bg.jpg">
+      <div class="hero-slide-item set-bg" data-setbg="img/banner.jpeg">
         <div class="slide-inner">
           <div class="slide-content">
-            <h2>Minimalistic <br>Architecture <br> and more</h2>
+            <h2>Ceone Engineering <br>Company LTD</h2>
             <a href="#" class="site-btn sb-light">See Project</a>
           </div>
         </div>
