--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 
   <header class="header-area">
     <a href="index.html" class="logo-area">
-      <img src="img/logo.png" alt>
+      <img src="img/ceone-img.png" alt>
     </a>
     <div class="nav-switch">
       <i class="fa fa-bars"></i>
