--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,8 @@
         </div>
       </div>
     </div>
-    <div class="map-area" id="map-canvas"></div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.7835546373335!2d7.005053299999999!3d4.8071873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1069ce82e909509d%3A0x55688d5b1438af0f!2s28%20Oromineke%20Ln%2C%20Rivers%2C%20Port%20Harcourt%20500101%2C%20Rivers!5e0!3m2!1sen!2sng!4v1716763445469!5m2!1sen!2sng" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <!-- <div class="map-area" id="map-canvas"></div> -->
   </section>
 
 
@@ -175,6 +176,6 @@
     crossorigin="anonymous"></script>
 </body>
 
-<!-- Mirrored from preview.colorlib.com/theme/Ceone/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 26 May 2024 17:06:36 GMT -->
+
 
 </html>
