--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
 
 <head>
-  <title>Ceone - Architecture</title>
+  <title>Contact -Ceone Engineering</title>
   <meta charset="UTF-8">
   <meta name="description" content="Ceone - Architecture Template">
   <meta name="keywords" content="Ceone, architecture, onepage, creative, html">
@@ -49,7 +49,7 @@
   </header>
 
 
-  <section class="page-header-section set-bg" data-setbg="img/header-bg-2.jpg">
+  <section class="page-header-section set-bg" data-setbg="img/contact.jpeg">
     <div class="container">
       <h1 class="header-title">Contact<span>.</span></h1>
     </div>
