--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-  <title>Ceone - Architecture</title>
+  <title>Home - Ceone Engineering</title>
   <meta charset="UTF-8">
   <meta name="description" content="Ceone">
   <meta name="keywords" content="Ceone">
