--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   </section>
 
 
-  <div class="projects-section pb50">
+  <!-- <div class="projects-section pb50">
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
@@ -270,10 +270,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
-  <div class="client-section spad">
+  <!-- <div class="client-section spad">
     <div class="container">
       <div id="client-carousel" class="client-slider">
         <div class="single-brand">
@@ -303,7 +303,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
   <footer class="footer-section">
