--- a/about.html
+++ b/about.html
@@ -153,26 +153,28 @@
           <div class="qut">“</div>
           <div class="testimonials-slider" id="test-slider">
             <div class="ts-item">
-              <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed
-                accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan
-                pellentesque ipsum. Nunc dapibus, libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur
-                finibus dolor vel lectus pretium interdum a eget ante. </p>
+              <p>"Before partnering with CEON, managing our oil and gas investments was a complex and time-consuming process. 
+                Since working with their team, we've experienced a significant improvement in efficiency. 
+                Their expertise in the industry allowed them to streamline our operations and identify new opportunities for growth. 
+                We're particularly impressed with their commitment to sustainable practices, which aligns perfectly with our own values." </p>
               <h4>Maria Westminster</h4>
               <span>Client</span>
             </div>
             <div class="ts-item">
-              <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed
-                accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan
-                pellentesque ipsum. Nunc dapibus, libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur
-                finibus dolor vel lectus pretium interdum a eget ante. </p>
+              <p>"We approached CEON with a complex challenge involving the development of a new oilfield. 
+                Their team of experienced professionals provided invaluable support throughout the entire process. 
+                From initial planning to project completion, they consistently demonstrated a deep understanding of industry regulations and best practices.
+                 They were not just a service provider, but a reliable partner and trusted advisor. 
+                We highly recommend CEON to any company seeking top-tier investment and oil and gas support." </p>
               <h4>Maria Westminster</h4>
               <span>Client</span>
             </div>
             <div class="ts-item">
-              <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed
-                accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan
-                pellentesque ipsum. Nunc dapibus, libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur
-                finibus dolor vel lectus pretium interdum a eget ante. </p>
+              <p>"CEON's commitment to sustainability is a breath of fresh air in the oil and gas industry.  
+                Their involvement in our recent project not only ensured its economic success but also prioritized environmental responsibility.  
+                We were particularly impressed by their dedication to the local community, as evidenced by their industrial park initiative.  
+                Their holistic approach to development creates long-term value for all stakeholders. 
+                We look forward to collaborating with CEON on future projects." </p>
               <h4>Maria Westminster</h4>
               <span>Client</span>
             </div>
@@ -225,12 +227,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-9 promo-text">
-          <h1>In need of a <span>fabulouse</span> home?</h1>
-          <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan
-            risus.</p>
+          <h1>Empowering the Energy Sector, Building a <span>Sustainable</span> Future</h1>
+          <p>CEON - Your Trusted Partner in Investment and Oil & Gas Support</p>
         </div>
         <div class="col-lg-3 text-lg-right">
-          <a href="#" class="site-btn sb-dark mt-4">Get in Touch</a>
+          <a href="contact.html" class="site-btn sb-dark mt-4">Contact Us Today</a>
         </div>
       </div>
     </div>
