--- a/service.html
+++ b/service.html
@@ -234,33 +234,21 @@
     </div>
   </section>
 
-  <section class="promo-section pt-0">
-    <div class="promo-box set-bg" data-setbg="img/bg.jpg">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9 promo-text">
-            <h1>In need of a <span>fabulouse</span> home?</h1>
-            <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed
-              accumsan risus.</p>
-          </div>
-          <div class="col-lg-3 text-lg-right">
-            <a href="#" class="site-btn sb-light mt-4">Get in Touch</a>
-          </div>
+  <section class="promo-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9 promo-text">
+          <h1>Empowering the Energy Sector, Building a <span>Sustainable</span> Future</h1>
+          <p>CEON - Your Trusted Partner in Investment and Oil & Gas Support</p>
+        </div>
+        <div class="col-lg-3 text-lg-right">
+          <a href="contact.html" class="site-btn sb-dark mt-4">Contact Us Today</a>
         </div>
       </div>
     </div>
   </section>
 
   <footer class="footer-section">
-    <div class="footer-social">
-      <div class="social-links">
-        <a href="#"><i class="fa fa-pinterest"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-instagram"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-      </div>
-    </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-9 offset-lg-3">
@@ -271,8 +259,6 @@
                   <li><a href="#">Home</a></li>
                   <li><a href="#">About us</a></li>
                   <li><a href="#">Services</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Blog</a></li>
                 </ul>
               </div>
             </div>
