--- a/about.html
+++ b/about.html
@@ -105,14 +105,14 @@
             
           </div>
         </div>
-        <div class="col-lg-4 col-md-12">
+        <!-- <div class="col-lg-4 col-md-12">
           <div class="solid-service-box">
             <h2>03.</h2>
             <h3>The Success</h3>
             <p>Fusce commodo tincidunt convallis. <br> Nunc at purus vitae nisl sagittis grav ida ut sit amet diam.</p>
            
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -122,7 +122,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 intro-text">
-          <h1>We are a creative Architecture<span>Studio</span></h1>
+          <h1>Your Trusted Partner in <span>Investment</span> and <span>Oil & Gas</span> Support</h1>
           <div class="row">
             <div class="col-md-6">
               <p>we are passionate about fostering economic development and creating value for our clients, partners, and the communities in which we operate. Our industrial park project in Rivers State is a testament to our dedication to promoting industrialization and job creation.
