--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
   <div class="service-box-section spad set-bg" data-setbg="img/service-bg.jpg">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-6 col-md-6">
           <div class="solid-service-box">
             <h2>01.</h2>
             <h3>Mission</h3>
@@ -97,7 +97,7 @@
             
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-6 col-md-6">
           <div class="solid-service-box">
             <h2>02.</h2>
             <h3>Vision</h3>
@@ -192,7 +192,7 @@
         <h1>The Team</h1>
       </div>
       <div class="row">
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-6 col-md-6">
           <div class="team-member">
             <img src="img/director.jpeg" alt>
             <div class="member-info">
@@ -201,7 +201,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-6 col-md-6">
           <div class="team-member">
             <img src="img/ud-director.jpeg" alt>
             <div class="member-info">
@@ -210,7 +210,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <!-- <div class="col-lg-4 col-md-6">
           <div class="team-member">
             <img src="img/team/3.jpg" alt>
             <div class="member-info">
@@ -218,7 +218,7 @@
               <p>Senior Architect</p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
