--- a/about.html
+++ b/about.html
@@ -185,6 +185,42 @@
     </div>
   </section>
 
+  <section class="intro-section spad">
+    <div class="container">
+      <div class="row">
+        <!-- <div class="col-lg-5">
+          <div class="service-slider">
+            <div class="ss-single">
+              <img src="img/service/1.jpg" alt>
+            </div>
+            <div class="ss-single">
+              <img src="img/service/2.jpg" alt>
+            </div>
+            <div class="ss-single">
+              <img src="img/service/3.jpg" alt>
+            </div>
+          </div>
+        </div> -->
+        <div class="col-lg-7 service-text">
+          <h1>Our Strategy</h1>
+          <h2>We want to grow by</h2>
+          <ol>
+            <li>Enhancing our position in our Major market in Africa. </li>
+            <li>Increasing our capabilities and the range of services we offer our customers.</li>
+            <li>Expanding our geographic presence, particularly in the Growth Regions.</li>
+          </ol>
+          <h2>Our People:</h2>
+          <ol>
+            <li>Our people are Ceone principal asset, as we do not own significant machinery or proprietary technology. 
+              Our continued success depends on how our people deliver for our customers daily. </li>
+            <li>It is vital that we continue to attract, develop, and retain skilled employees. We work hard to achieve this and are successful.</li>
+
+          </ol>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <section class="team-section spad">
     <div class="container">
