updated the potfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,14 +72,14 @@
       <div id="portfolio">
         <div class="grid-sizer"></div>
 
-        <div class="grid-item set-bg grid-wide photo" data-setbg="img/portfolio/1.jpg"><a class="img-popup"
-            href="img/portfolio/1.jpg"></a></div>
+        <div class="grid-item set-bg grid-wide photo" data-setbg="img/portfolio/a.jpg"><a class="img-popup"
+            href="img/portfolio/a.jpg"></a></div>
 
-        <div class="grid-item set-bg design corp" data-setbg="img/portfolio/2.jpg"><a class="img-popup"
-            href="img/portfolio/2.jpg"></a></div>
+        <div class="grid-item set-bg design corp" data-setbg="img/portfolio/b.jpg"><a class="img-popup"
+            href="img/portfolio/b.jpg"></a></div>
 
-        <div class="grid-item set-bg iden photo uxui" data-setbg="img/portfolio/3.jpg"><a class="img-popup"
-            href="img/portfolio/3.jpg"></a></div>
+        <div class="grid-item set-bg iden photo uxui" data-setbg="img/portfolio/c.jpg"><a class="img-popup"
+            href="img/portfolio/c.jpg"></a></div>
 
         <div class="grid-item set-bg corp design" data-setbg="img/portfolio/4.jpg"><a class="img-popup"
             href="img/portfolio/4.jpg"></a></div>
