--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,8 @@
       </div>
       <div class="row">
         <div class="col-lg-3 contact-info mb-5 mb-lg-0">
-          <p>Address: 28 Oromineke Lane, D - line, Port Harcourt, Rivers State </p>
+          <p><strong>China Address:</strong> Building 1, No. 35 Shishan Road, High-tech Zone, Suzhou, Jiangsu, China 1006-302</p>
+          <p><strong>Nigeria Address:</strong> 28 Oromineke Lane, D - line, Port Harcourt, Rivers State , Nigeria</p>
           <p>Phone: +234 802 537 9288</p>
           <p>Email: info@ceone.com</p>
           <div class="cf-social">
