--- a/contact.html
+++ b/contact.html
@@ -65,14 +65,8 @@
         <div class="col-lg-3 contact-info mb-5 mb-lg-0">
           <p><strong>China Address:</strong> Building 1, No. 35 Shishan Road, High-tech Zone, Suzhou, Jiangsu, China 1006-302</p>
           <p><strong>Nigeria Address:</strong> 28 Oromineke Lane, D - line, Port Harcourt, Rivers State , Nigeria</p>
-          <p>Phone: +234 802 537 9288</p>
-          <p>Email: info@ceone.com</p>
-          <div class="cf-social">
-            <a href="#"><i class="fa fa-google-plus"></i></a>
-            <a href="#"><i class="fa fa-pinterest"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-          </div>
+          <p><strong>Phone:</strong>  +234 802 537 9288</p>
+          <p><strong>Email:</strong> info@ceone.com</p>
         </div>
         <div class="col-lg-9">
           <form class="contact-form">
