--- a/portfolio.html
+++ b/portfolio.html
@@ -35,13 +35,13 @@
     <div class="nav-switch">
       <i class="fa fa-bars"></i>
     </div>
-    <div class="phone-number">+675 334 567 223</div>
+    <div class="phone-number">+234 802 537 9288</div>
     <nav class="nav-menu">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About us</a></li>
         <li><a href="service.html">Services</a></li>
-        <li class="active"><a href="portfolio.html">Portfolio</a></li>
+        <li class="active"><a href="#">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -80,13 +80,6 @@
 
         <div class="grid-item set-bg grid-long design corp" data-setbg="img/portfolio/6.jpg"><a class="img-popup"
             href="img/portfolio/6.jpg"></a></div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="pagination">
-        <a href="#">01</a>
-        <a href class="active">02</a>
-        <a href>03</a>
       </div>
     </div>
   </div>
