--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   </section>
 
 
-  <!-- <div class="projects-section pb50">
+  <div class="projects-section pb50">
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
@@ -223,46 +223,38 @@
             <h1>Projects</h1>
           </div>
         </div>
-        <div class="col-lg-9">
-          <ul class="projects-filter-nav">
-            <li class="btn-filter" data-filter="*">All</li>
-            <li class="btn-filter" data-filter=".rest">Restaurations</li>
-            <li class="btn-filter" data-filter=".build">Buildings</li>
-            <li class="btn-filter" data-filter=".apart">Apartments</li>
-          </ul>
-        </div>
       </div>
     </div>
     <div id="projects-carousel" class="projects-slider">
-      <div class="single-project set-bg rest" data-setbg="img/projects/1.jpg">
+      <div class="single-project set-bg rest" data-setbg="img/projects/e.jpg">
         <div class="project-content">
           <h2>Biggest <br> Restaurations</h2>
           <p>Jan 19, 2018</p>
           <a href="#" class="seemore">See Project </a>
         </div>
       </div>
-      <div class="single-project set-bg build" data-setbg="img/projects/2.jpg">
+      <div class="single-project set-bg build" data-setbg="img/projects/b.jpeg">
         <div class="project-content">
           <h2>Office <br> Building</h2>
           <p>Jan 19, 2018</p>
           <a href="#" class="seemore">See Project </a>
         </div>
       </div>
-      <div class="single-project set-bg apart" data-setbg="img/projects/3.jpg">
+      <div class="single-project set-bg apart" data-setbg="img/projects/c.jpeg">
         <div class="project-content">
           <h2>Nice <br> Apartments</h2>
           <p>Jan 19, 2018</p>
           <a href="#" class="seemore">See Project </a>
         </div>
       </div>
-      <div class="single-project set-bg rest" data-setbg="img/projects/4.jpg">
+      <div class="single-project set-bg rest" data-setbg="img/projects/d.jpeg">
         <div class="project-content">
           <h2>Biggest <br> Restaurations</h2>
           <p>Jan 19, 2018</p>
           <a href="#" class="seemore">See Project </a>
         </div>
       </div>
-      <div class="single-project set-bg apart" data-setbg="img/projects/2.jpg">
+      <div class="single-project set-bg apart" data-setbg="img/projects/a.jpg">
         <div class="project-content">
           <h2>Office <br> Building</h2>
           <p>Jan 19, 2018</p>
@@ -270,7 +262,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
 
   <!-- <div class="client-section spad">
