--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
               <p>At CEON, we are passionate about fostering economic development and creating value for our clients, partners, and the communities in which we operate. 
                 Our industrial park project in Rivers State is a testament to our dedication to promoting industrialization and job creation.</p>
-          <a href="#" class="site-btn sb-dark">See Project</a>
+          <a href="about.html" class="site-btn sb-dark">About Us</a>
         </div>
         <div class="col-lg-5 pt-4">
           <img src="img/intro.png" alt>
@@ -320,6 +320,7 @@
             <div class="col-md-4">
               <div class="footer-item">
                 <ul>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About us</a></li>
                   
                 </ul>
@@ -329,6 +330,7 @@
               <div class="footer-item">
                 <ul>
                   <li><a href="service.html">Services</a></li>
+                  <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
               </div>
             </div>
@@ -346,7 +348,7 @@
 
     
     <div class="copyright">
-      <a href="#" class="logo-area">
+      <a href="index.html" class="logo-area">
         <img src="img/ceone-img.png" alt>
       </a>
     </div>
