--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <li><a href="index.html">Home</a></li>
         <li class="active"><a href="about.html">About us</a></li>
         <li><a href="service.html">Services</a></li>
-        <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
+         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -272,6 +272,7 @@
             <div class="col-md-4">
               <div class="footer-item">
                 <ul>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About us</a></li>
                   
                 </ul>
@@ -281,6 +282,7 @@
               <div class="footer-item">
                 <ul>
                   <li><a href="service.html">Services</a></li>
+                  <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
               </div>
             </div>
