--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About us</a></li>
         <li><a href="service.html">Services</a></li>
-        <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li class="active"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -91,6 +91,7 @@
             <div class="col-md-4">
               <div class="footer-item">
                 <ul>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About us</a></li>
                   
                 </ul>
@@ -100,6 +101,7 @@
               <div class="footer-item">
                 <ul>
                   <li><a href="service.html">Services</a></li>
+                  <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
               </div>
             </div>
