--- a/service.html
+++ b/service.html
@@ -40,7 +40,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About us</a></li>
         <li class="active"><a href="#">Services</a></li>
-        <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -241,6 +241,7 @@
             <div class="col-md-4">
               <div class="footer-item">
                 <ul>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About us</a></li>
                   
                 </ul>
@@ -250,6 +251,7 @@
               <div class="footer-item">
                 <ul>
                   <li><a href="service.html">Services</a></li>
+                  <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
               </div>
             </div>
