--- a/index.html
+++ b/index.html
@@ -178,9 +178,7 @@
                 <img src="img/icon/dark/6.png" alt>
               </div>
             </div>
-            <h3>Restauration Projects</h3>
-            <p></p>
-            
+            <h3>And many more</h3>
           </div>
         </div>
       </div>
