--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="slide-inner">
           <div class="slide-content">
             <h2>Ceone Engineering <br>Company LTD</h2>
-            <a href="#" class="site-btn sb-light">See Project</a>
+            <a href="contact.html" class="site-btn sb-light">Contact us</a>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
         <div class="slide-inner">
           <div class="slide-content">
             <h2>Building a <br>Sustainable <br> Future</h2>
-            <a href="#" class="site-btn sb-light">See Project</a>
+            <a href="contact.html" class="site-btn sb-light">contact us</a>
           </div>
         </div>
       </div>
@@ -281,7 +281,7 @@
       <div class="row">
         <div class="col-lg-9 promo-text">
           <h1>Empowering the Energy Sector, Building a <span>Sustainable</span> Future</h1>
-          <p>CEON - Your Trusted Partner in Investment and Oil & Gas Support</p>
+          <p>CEONE - Your Trusted Partner in Investment and Oil & Gas Support</p>
         </div>
         <div class="col-lg-3 text-lg-right">
           <a href="contact.html" class="site-btn sb-dark mt-4">Contact Us Today</a>
