--- a/service.html
+++ b/service.html
@@ -136,7 +136,7 @@
                 <img src="img/icon/dark/6.png" alt>
               </div>
             </div>
-            <h3>Restauration Projects</h3>
+            <h3>and many more</h3>
             <p></p>
             
           </div>
@@ -163,7 +163,7 @@
           </div>
         </div>
         <div class="col-lg-7 service-text">
-          <h1>We <span>HSE</span></h1>
+          <h1><span>HSE</span></h1>
           
           <p>Our people are our asset. We are committed to safety and implement safety measures to safeguard precious lives. 
             As a team, we set the standards and promote a culture where safety is a core value for each employee. </p>
