--- a/portfolio.html
+++ b/portfolio.html
@@ -63,23 +63,23 @@
       <div id="portfolio">
         <div class="grid-sizer"></div>
 
-        <div class="grid-item set-bg grid-wide photo" data-setbg="img/portfolio/a.jpg"><a class="img-popup"
+        <div class="grid-item set-bg grid-wide photo" data-setbg="img/portfolio/a.jpg"><a
             href="img/portfolio/a.jpg"></a></div>
 
-        <div class="grid-item set-bg design corp" data-setbg="img/portfolio/b.jpg"><a class="img-popup"
+        <div class="grid-item set-bg design corp" data-setbg="img/portfolio/b.jpg"><a
             href="img/portfolio/b.jpg"></a></div>
 
-        <div class="grid-item set-bg iden photo uxui" data-setbg="img/portfolio/c.jpg"><a class="img-popup"
+        <div class="grid-item set-bg iden photo uxui" data-setbg="img/portfolio/c.jpg"><a 
             href="img/portfolio/c.jpg"></a></div>
 
-        <div class="grid-item set-bg corp design" data-setbg="img/portfolio/4.jpg"><a class="img-popup"
-            href="img/portfolio/4.jpg"></a></div>
+        <div class="grid-item set-bg corp design" data-setbg="img/projects/equip.jpeg"><a 
+            href="img/projects/team.jpeg"></a></div>
 
-        <div class="grid-item set-bg uxui iden" data-setbg="img/portfolio/5.jpg"><a class="img-popup"
-            href="img/portfolio/5.jpg"></a></div>
+        <div class="grid-item set-bg uxui iden" data-setbg="img/projects/teams.jpeg"><a 
+            href="img/projects/teams.jpeg"></a></div>
 
-        <div class="grid-item set-bg grid-long design corp" data-setbg="img/portfolio/6.jpg"><a class="img-popup"
-            href="img/portfolio/6.jpg"></a></div>
+        <div class="grid-item set-bg grid-long design corp" data-setbg="img/projects/team.jpeg"><a 
+            href="img/projects/team.jpeg"></a></div>
       </div>
     </div>
   </div>
