--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <a href="about.html" class="site-btn sb-dark">About Us</a>
         </div>
         <div class="col-lg-5 pt-4">
-          <img src="img/intro.png" alt>
+          <img src="img/projects/energy.jpg" alt>
         </div>
       </div>
     </div>
