--- a/portfolio.html
+++ b/portfolio.html
@@ -81,6 +81,27 @@
         <div class="grid-item set-bg grid-long design corp" data-setbg="img/projects/team.jpeg"><a 
             href="img/projects/team.jpeg"></a></div>
       </div>
+      <div id="portfolio">
+        <div class="grid-sizer"></div>
+
+        <div class="grid-item set-bg grid-wide photo" data-setbg="img/portfolio/a.jpg"><a
+            href="img/portfolio/a.jpg"></a></div>
+
+        <div class="grid-item set-bg design corp" data-setbg="img/portfolio/b.jpg"><a
+            href="img/portfolio/b.jpg"></a></div>
+
+        <div class="grid-item set-bg iden photo uxui" data-setbg="img/portfolio/c.jpg"><a 
+            href="img/portfolio/c.jpg"></a></div>
+
+        <div class="grid-item set-bg corp design" data-setbg="img/projects/equip.jpeg"><a 
+            href="img/projects/team.jpeg"></a></div>
+
+        <div class="grid-item set-bg uxui iden" data-setbg="img/projects/teams.jpeg"><a 
+            href="img/projects/teams.jpeg"></a></div>
+
+        <div class="grid-item set-bg grid-long design corp" data-setbg="img/projects/team.jpeg"><a 
+            href="img/projects/team.jpeg"></a></div>
+      </div>
     </div>
   </div>
 
