--- a/portfolio.html
+++ b/portfolio.html
@@ -80,27 +80,26 @@
 
         <div class="grid-item set-bg grid-long design corp" data-setbg="img/projects/team.jpeg"><a 
             href="img/projects/team.jpeg"></a></div>
-      </div>
-      <div id="portfolio">
-        <div class="grid-sizer"></div>
 
-        <div class="grid-item set-bg grid-wide photo" data-setbg="img/portfolio/a.jpg"><a
-            href="img/portfolio/a.jpg"></a></div>
 
-        <div class="grid-item set-bg design corp" data-setbg="img/portfolio/b.jpg"><a
-            href="img/portfolio/b.jpg"></a></div>
 
-        <div class="grid-item set-bg iden photo uxui" data-setbg="img/portfolio/c.jpg"><a 
-            href="img/portfolio/c.jpg"></a></div>
-
-        <div class="grid-item set-bg corp design" data-setbg="img/projects/equip.jpeg"><a 
-            href="img/projects/team.jpeg"></a></div>
-
-        <div class="grid-item set-bg uxui iden" data-setbg="img/projects/teams.jpeg"><a 
-            href="img/projects/teams.jpeg"></a></div>
-
-        <div class="grid-item set-bg grid-long design corp" data-setbg="img/projects/team.jpeg"><a 
-            href="img/projects/team.jpeg"></a></div>
+        <div class="grid-item set-bg grid-wide photo" data-setbg="img/projects/opobo.jpg"><a
+              href="img/projects/opobo.jpg"></a></div>
+  
+        <div class="grid-item set-bg design corp" data-setbg="img/projects/speak.jpg"><a
+              href="img/projects/speak.jpg"></a></div>
+  
+        <div class="grid-item set-bg iden photo uxui" data-setbg="img/projects/waste.jpg"><a 
+              href="img/projects/waste.jpg"></a></div>
+  
+        <div class="grid-item set-bg corp design" data-setbg="img/projects/eco-view.jpg"><a 
+              href="img/projects/eco-view.jpg"></a></div>
+  
+        <div class="grid-item set-bg uxui iden" data-setbg="img/projects/deepc.jpg"><a 
+              href="img/projects/deepc.jpg"></a></div>
+  
+        <div class="grid-item set-bg grid-long design corp" data-setbg="img/projects/large.jpg"><a 
+              href="img/projects/large.jpg"></a></div>
       </div>
     </div>
   </div>
