--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
               <img src="img/enginer.png" alt>
             </div>
             <div class="ss-single">
-              <img src="img/helmet.png" alt>
+              <img src="img/projects/ship.jpg" alt>
             </div>
             <div class="ss-single">
               <img src="img/rig.png" alt>
