--- a/service.html
+++ b/service.html
@@ -212,7 +212,7 @@
           <a href="#" class="site-btn sb-dark">Reach out to us</a>
         </div>
         <div class="col-lg-5 pt-4">
-          <img src="img/product.jpeg" alt>
+          <img src="img/projects/valve.jpg" alt>
         </div>
       </div>
     </div>
