--- a/service.html
+++ b/service.html
@@ -224,7 +224,7 @@
       <div class="row">
         <div class="col-lg-9 promo-text">
           <h1>Empowering the Energy Sector, Building a <span>Sustainable</span> Future</h1>
-          <p>CEON - Your Trusted Partner in Investment and Oil & Gas Support</p>
+          <p>CEONE - Your Trusted Partner in Investment and Oil & Gas Support</p>
         </div>
         <div class="col-lg-3 text-lg-right">
           <a href="contact.html" class="site-btn sb-dark mt-4">Contact Us Today</a>
