--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
         <h1>The Team</h1>
       </div>
       <div class="row">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-4 col-md-6">
           <div class="team-member">
             <img src="img/director.jpeg" alt>
             <div class="member-info">
@@ -237,7 +237,16 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-4 col-md-6">
+          <div class="team-member">
+            <img src="img/kene.jpg" alt>
+            <div class="member-info">
+              <h2>Engr. Kenechukwu K. Nwangwu</h2>
+              <p>Executive Director</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
           <div class="team-member">
             <img src="img/ud-director.jpeg" alt>
             <div class="member-info">
