--- a/about.html
+++ b/about.html
@@ -233,7 +233,7 @@
             <img src="img/director.png" alt>
             <div class="member-info">
               <h2>Obinna Nwanma</h2>
-              <p>Managing Director</p>
+              <p>Chief Executive Officer/Managing Director</p>
             </div>
           </div>
         </div>
